JSAI/error/src/test/resources/base/loops_a011.js
var obj = {f1: 1, f2: 2};

for (var i in obj) {
  print(i)
};

print(i)
i;
